test/corpus/number.txt
======================
should parse literal 0
======================

0

---

(document
  (expr
    (number)))

======================
should parse literal 1
======================

1

---

(document
  (expr
    (number)))

=========================
should parse literal 3.14
=========================

3.14

---

(document
  (expr
    (number)))

============================
should parse literal 1.23e10
============================

1.23e10

---

(document
  (expr
    (number)))

=====================================
should not parse a leading minus sign
=====================================

-1

---

(document
  (ERROR
    (UNEXPECTED '-'))
  (expr
    (number)))

==================================
should not parse a leading decimal
==================================

.123

---

(document
  (ERROR
    (UNEXPECTED '.'))
  (expr
    (number)))
